Merge remote-tracking branch 'origin/master' into Map_validation