@@ -65,11 +65,11 @@ public class MapValidatorTest {
     @Test
     void testDfsNotConnected() {        
         // There is no connection to l_country4
-        d_country1.addNeighbours(Arrays.asList(2, 3));
-        d_country2.addNeighbours(Arrays.asList(1, 3, 5));
-        d_country3.addNeighbours(Arrays.asList(1, 2));
-        d_country4.addNeighbours(List.of(3));
-        d_country5.addNeighbours(Arrays.asList(2, 3));
+        d_country1.addNeighbors(Arrays.asList(2, 3));
+        d_country2.addNeighbors(Arrays.asList(1, 3, 5));
+        d_country3.addNeighbors(Arrays.asList(1, 2));
+        d_country4.addNeighbors(List.of(3));
+        d_country5.addNeighbors(Arrays.asList(2, 3));
         
         d_map.addContinent(d_continent1);
         d_map.addContinent(d_continent2);
@@ -92,9 +92,9 @@ public class MapValidatorTest {
     @Test
     void testDfsConnectedOneWay() {
     	
-        d_country1.addNeighbours(Arrays.asList(2, 3));
-        d_country2.addNeighbours(Arrays.asList(5));
-        d_country3.addNeighbours(Arrays.asList(4));
+        d_country1.addNeighbors(Arrays.asList(2, 3));
+        d_country2.addNeighbors(Arrays.asList(5));
+        d_country3.addNeighbors(Arrays.asList(4));
         
         d_map.addContinent(d_continent1);
         d_map.addContinent(d_continent2);
@@ -123,11 +123,11 @@ public class MapValidatorTest {
     @Test
     void testMapIsConnectedNotConnected() {        
         // There is no connection to l_country4
-        d_country1.addNeighbours(Arrays.asList(2, 3));
-        d_country2.addNeighbours(Arrays.asList(1, 3, 5));
-        d_country3.addNeighbours(Arrays.asList(1, 2));
-        d_country4.addNeighbours(List.of(3));
-        d_country5.addNeighbours(Arrays.asList(2, 3));
+        d_country1.addNeighbors(Arrays.asList(2, 3));
+        d_country2.addNeighbors(Arrays.asList(1, 3, 5));
+        d_country3.addNeighbors(Arrays.asList(1, 2));
+        d_country4.addNeighbors(List.of(3));
+        d_country5.addNeighbors(Arrays.asList(2, 3));
         
         d_map.addContinent(d_continent1);
         d_map.addContinent(d_continent2);
@@ -145,9 +145,9 @@ public class MapValidatorTest {
     @Test
     void testMapIsConnectedConnectedOneWay() {
     	
-        d_country1.addNeighbours(Arrays.asList(2, 3));
-        d_country2.addNeighbours(Arrays.asList(5));
-        d_country3.addNeighbours(Arrays.asList(4));
+        d_country1.addNeighbors(Arrays.asList(2, 3));
+        d_country2.addNeighbors(Arrays.asList(5));
+        d_country3.addNeighbors(Arrays.asList(4));
         
         d_map.addContinent(d_continent1);
         d_map.addContinent(d_continent2);
@@ -172,5 +172,47 @@ public class MapValidatorTest {
     		l_expectedResult.add(Boolean.TRUE);
     	l_expectedResult.set(1, Boolean.FALSE);
     	assertEquals(l_expectedResult, l_mapVal.dfs(l_continentToTest.getCountryIdList().get(0), l_continentToTest));
+    }
+    
+    @Test
+    void testmapAndContinentsConnectedRealMap() {
+    	loadMap("src/test/resources/canada.map", d_map);
+    	MapValidator l_mapVal = new MapValidator(d_map);
+    	assertTrue(l_mapVal.mapAndContinentsConnected());
+    }
+    
+    @Test
+    void testisMapValidGoodMap() {
+    	loadMap("src/test/resources/canada.map", d_map);
+    	MapValidator l_mapVal = new MapValidator(d_map);
+    	assertTrue(l_mapVal.isMapValid());
+    }
+    
+    @Test
+    void testisMapValidDisconnectedContinent() {
+    	loadMap(d_path, d_map);
+    	MapValidator l_mapVal = new MapValidator(d_map);
+    	assertFalse(l_mapVal.isMapValid());
+    }
+    
+    @Test
+    void testisMapValidDisconnectedMap() {
+        d_country1.addNeighbors(Arrays.asList(2, 3));
+        d_country2.addNeighbors(Arrays.asList(3, 5));
+        d_country3.addNeighbors(Arrays.asList(2, 4));
+        d_country4.addNeighbors(List.of(3));
+        d_country5.addNeighbors(Arrays.asList(2, 3));
+        
+        d_map.addContinent(d_continent1);
+        d_map.addContinent(d_continent2);
+        
+        d_map.addCountry(d_country1);
+        d_map.addCountry(d_country2);
+        d_map.addCountry(d_country3);
+        d_map.addCountry(d_country4);
+        d_map.addCountry(d_country5);
+        
+    	MapValidator l_mapVal = new MapValidator(d_map);
+    	assertFalse(l_mapVal.isMapValid());
     }
 }
